samples/_failures_safe/1761358431_0c608c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afef7732.c: In function ‘read_string’:
./samples/SAFE/__tmp_afef7732.c:157:13: error: expected expression at end of input
  157 |             token->line =
      |             ^~~~~
./samples/SAFE/__tmp_afef7732.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_afef7732.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_afef7732.c:157:13: error: expected declaration or statement at end of input
